--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^4.1.3",
+    "sweetalert2": "^11.1.9",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
