--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-lazy-load-image-component": "^1.5.1",
     "react-loading-skeleton": "^2.2.0",
+    "react-modal": "^3.14.3",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
